--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,7 +6,7 @@
     <BODY>
         <H1>States</H1>
         <UL>
-        {% for state in states %}
+        {% for state in states|sort(attribute='id') %}
             <LI>{{ state.id }}: <B>{{ state.name }} </B>
                 <UL>
                     {% for city in state.cities %}
