--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -7,13 +7,7 @@
         <H1>States</H1>
         <UL>
         {% for state in states|sort(attribute='id') %}
-            <LI>{{ state.id }}: <B>{{ state.name }} </B>
-                <UL>
-                    {% for city in state.cities %}
-                        <LI> {{city.id}}: <B>{{ city.name }}</B> </LI>
-                    {% endfor %}
-                </UL>
-            </LI>
+            <LI>{{ state.id }}: <B>{{ state.name }} </B> </LI>
         {% endfor %}
         </UL>
     </BODY>
