--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -9,7 +9,7 @@
         {% for state in states|sort(attribute='id') %}
             <LI>{{ state.id }}: <B>{{ state.name }} </B>
                 <UL>
-                    {% for city in state.cities|sort(attribute='id') %}
+                    {% for city in state.cities|sort(attribute='name') %}
                         <LI> {{city.id}}: <B>{{ city.name }}</B> </LI>
                     {% endfor %}
                 </UL>
