--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -8,12 +8,14 @@
         <UL>
         {% for state in states|sort(attribute='id') %}
             <LI>{{ state.id }}: <B>{{ state.name }} </B>
-                <UL>
-                    {% for city in state.cities|sort(attribute='name') %}
-                        <LI> {{city.id}}: <B>{{ city.name }}</B> </LI>
-                    {% endfor %}
-                </UL>
-            </LI>
+                {% if 'cities' in state.keys() %}
+                    <UL>
+                        {% for city in state.cities|sort(attribute='name') %}
+                            <LI> {{city.id}}: <B>{{ city.name }}</B> </LI>
+                        {% endfor %}
+                    </UL>
+                {% endif %}
+                </LI>
         {% endfor %}
         </UL>
     </BODY>
