--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -10,7 +10,7 @@
             <LI>{{ state.id }}: <B>{{ state.name }} </B>
                 {% if 'cities' in state.keys() %}
                     <UL>
-                        {% for city in state.cities|sort(attribute='name') %}
+                        {% for city in list(state.cities)|sort(attribute='name') %}
                             <LI> {{city.id}}: <B>{{ city.name }}</B> </LI>
                         {% endfor %}
                     </UL>
