--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -6,7 +6,7 @@
     <BODY>
         <H1>States</H1>
         <UL>
-        {% for state in states|sort(attribute='id') %}
+        {% for state in states|sort(attribute='name') %}
             <LI>{{ state.id }}: <B>{{ state.name }} </B>
                 {% if 'cities' in state.keys() %}
                     <UL>
