--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -8,14 +8,12 @@
         <UL>
         {% for state in states|sort(attribute='name') %}
             <LI>{{ state.id }}: <B>{{ state.name }} </B>
-                {% if 'cities' in state.keys() %}
-                    <UL>
-                        {% for city in list(state.cities)|sort(attribute='name') %}
-                            <LI> {{city.id}}: <B>{{ city.name }}</B> </LI>
-                        {% endfor %}
-                    </UL>
-                {% endif %}
-                </LI>
+                <UL>
+                    {% for city in state.cities|sort(attribute='name') %}
+                        <LI> {{ city.id }}: <B>{{ city.name }}</B> </LI>
+                    {% endfor %}
+                </UL>
+            </LI>
         {% endfor %}
         </UL>
     </BODY>
