--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -19,7 +19,7 @@
             </UL>
             {% elif type(states).__name__ == 'State' %}
             <H1>State: {{ states.name }}</H1>
-            <H3>Cities: {{}}</H3>
+            <H3>Cities:</H3>
             <UL>
                 {% for city in state.cities|sort(attribute='name') %}
                     <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
